# CPP_courses

./: CMakeLists.txt  Makefile_old  README.md
include/: CLI.hpp  main.hpp
naive-calculator/: Makefile  naive_calculator
naive-calculator/include/: CalculatorParser.hpp
naive-calculator/src/: CLI.cpp  main.cpp
